@@ -1,114 +1,102 @@
 package com.project.onlybuns.config;
-import io.jsonwebtoken.JwtException;
-import org.springframework.security.core.authority.SimpleGrantedAuthority;
-
 
 import com.project.onlybuns.model.User;
-import com.project.onlybuns.model.User;
-import io.jsonwebtoken.Claims;
-import io.jsonwebtoken.Jwts;
+import io.jsonwebtoken.*;
 import io.jsonwebtoken.security.Keys;
 import jakarta.annotation.PostConstruct;
+import jakarta.servlet.FilterChain;
+import jakarta.servlet.ServletException;
+import jakarta.servlet.http.HttpServletRequest;
+import jakarta.servlet.http.HttpServletResponse;
 import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.security.web.authentication.WebAuthenticationDetailsSource;
 import org.springframework.stereotype.Component;
 import org.springframework.web.filter.OncePerRequestFilter;
 
-import jakarta.servlet.FilterChain;
-import jakarta.servlet.ServletException;
-import jakarta.servlet.http.HttpServletRequest;
-import jakarta.servlet.http.HttpServletResponse;
-
 import javax.crypto.SecretKey;
 import java.io.IOException;
 import java.nio.charset.StandardCharsets;
-import java.util.Collections;
-import java.util.Date;
-import java.util.List;
+import java.util.*;
 
 @Component
 public class JwtAuthenticationFilter extends OncePerRequestFilter {
 
-    // Direktno definišemo tajni ključ
-    private static final String JWT_SECRET = "kljucmoradabudeveciiiiiiiiijeljasnjooooooooooooooo";
-
-    private SecretKey secretKey;
+    private static final String SECRET = "kljucmoradabudeveciiiiiiiiijeljasnjooooooooooooooo";
+    private SecretKey key;
 
     public JwtAuthenticationFilter() {
-        this.secretKey = Keys.hmacShaKeyFor(JWT_SECRET.getBytes(StandardCharsets.UTF_8));
+        this.key = Keys.hmacShaKeyFor(SECRET.getBytes(StandardCharsets.UTF_8));
     }
 
     @PostConstruct
-    public void init() {
-        if (JWT_SECRET == null || JWT_SECRET.trim().isEmpty()) {
-            throw new IllegalArgumentException("JWT secret cannot be null or empty");
+    public void setupSecretKey() {
+        if (SECRET == null || SECRET.isBlank()) {
+            throw new IllegalArgumentException("Secret for JWT must be defined");
         }
-        secretKey = Keys.hmacShaKeyFor(JWT_SECRET.getBytes(StandardCharsets.UTF_8));
-        System.out.println("Secret key initialized successfully.");
+        key = Keys.hmacShaKeyFor(SECRET.getBytes(StandardCharsets.UTF_8));
+        System.out.println("JWT secret key successfully configured.");
     }
 
-    public String generateToken(User user) {
-     //   String userType = User ? "ROLE_ADMIN" : "ROLE_REGISTERED";
-        String userType = user.getUserType().toString();
-        System.out.println("Generating token for user: " + user.getUsername() + " with type: " + userType);
+    public String createToken(User user) {
+        String role = user.getUserType().name();
+
+        System.out.println("Issuing token for: " + user.getUsername() + ", role: " + role);
 
         return Jwts.builder()
                 .setSubject(user.getUsername())
-                .claim("authorities", Collections.singletonList(userType))
+                .claim("roles", List.of(role))
                 .setIssuedAt(new Date())
-                .setExpiration(new Date(System.currentTimeMillis() + 86400000)) // 1 day
-                .signWith(secretKey) // Koristi inicijalizovani secretKey
+                .setExpiration(new Date(System.currentTimeMillis() + 24 * 60 * 60 * 1000)) // valid for 24h
+                .signWith(key)
                 .compact();
     }
 
-
-    public Claims parseToken(String token) {
+    public Claims validateToken(String token) {
         try {
             return Jwts.parser()
-                    .setSigningKey(secretKey)  // Use your signing key here
+                    .setSigningKey(key)
                     .parseClaimsJws(token)
                     .getBody();
         } catch (JwtException e) {
-            return null; // Return null if the token is invalid
+            return null;
         }
     }
 
-
     @Override
-    protected void doFilterInternal(HttpServletRequest request, HttpServletResponse response, FilterChain filterChain)
+    protected void doFilterInternal(HttpServletRequest req, HttpServletResponse res, FilterChain chain)
             throws ServletException, IOException {
-        String authorizationHeader = request.getHeader("Authorization");
 
-        if (authorizationHeader != null && authorizationHeader.startsWith("Bearer ")) {
-            String jwt = authorizationHeader.substring(7);
+        String authHeader = req.getHeader("Authorization");
+
+        if (authHeader != null && authHeader.startsWith("Bearer ")) {
+            String token = authHeader.substring(7);
             try {
                 Claims claims = Jwts.parser()
-                        .setSigningKey(secretKey)
-                        .parseClaimsJws(jwt)
+                        .setSigningKey(key)
+                        .parseClaimsJws(token)
                         .getBody();
 
-                String username = claims.getSubject(); // Ovde dobijamo username iz JWT-a
+                String username = claims.getSubject();
+
                 if (username != null) {
-                    // Dodeljujemo korisniku rolu i autentifikujemo ga
-                    List<String> roles = claims.get("authorities", List.class);
+                    List<String> roles = claims.get("roles", List.class);
                     List<SimpleGrantedAuthority> authorities = roles.stream()
                             .map(SimpleGrantedAuthority::new)
                             .toList();
 
-                    UsernamePasswordAuthenticationToken authentication =
+                    UsernamePasswordAuthenticationToken authToken =
                             new UsernamePasswordAuthenticationToken(username, null, authorities);
-                    authentication.setDetails(new WebAuthenticationDetailsSource().buildDetails(request));
-                    SecurityContextHolder.getContext().setAuthentication(authentication);
+                    authToken.setDetails(new WebAuthenticationDetailsSource().buildDetails(req));
+                    SecurityContextHolder.getContext().setAuthentication(authToken);
                 }
 
             } catch (Exception e) {
-                System.out.println("Error parsing JWT: " + e.getMessage());
+                System.err.println("JWT processing failed: " + e.getMessage());
             }
         }
 
-        filterChain.doFilter(request, response);
+        chain.doFilter(req, res);
     }
-
-
 }
